<resources>
    <string name="app_name">CryptoQuack</string>
    <string name="exchange_gemini_name">Gemini</string>
    <string name="exchange_gemini_sandbox_name">Gemini Sandbox</string>
    <string name="exchange_bittrex_name">Bittrex</string>
    <string name="exchange_binance_name">Binance</string>
    <string name="exchanges_header">Exchanges</string>
    <string name="market_indicator_label" >Market:</string>
    <string name="action_label">Action:</string>
    <string name="buy_action">Buy</string>
    <string name="unkonwn_action">Unknown</string>
    <string name="sell_action">Sell</string>
    <string name="loading">Loading...</string>
    <string name="current_price_indicator_label">Current price:</string>
    <string name="get_current_price_error">Error when getting current price</string>
    <string name="quantity_indicator_label">Quantity:</string>
    <string name="order_price_indicator_label">Order price:</string>
    <string name="order_place">Place Order</string>
    <string name="subtotal_indicator_label">Subtotal:</string>
    <string name="fee_indicator_label">Fee:</string>
    <string name="total_price_label">Total:</string>
    <string name="order_item_order_time_default_text">2018-02-08 21:51:09</string>
    <string name="order_item_order_type_default_text">LIMIT</string>
    <string name="order_item_order_action_default_text">Order Action</string>
    <string name="order_item_order_amount_price_default_text">BUY 1 ETH@$1000.00</string>
    <string name="order_item_order_progress_default_text">0% Filled</string>
    <string name="order_completed_status_string">COMPLETED</string>
    <string name="order_cancelled_status_string">CANCELLED</string>
    <string name="order_in_progress_status_string">IN PROGRESS</string>
    <string name="order_cancel_button_string">Cancel</string>
    <string name="order_filled_progress_string_format">%d%% Filled</string>
    <string-array name="landing_activity_selection_list">
        <item>Exchanges</item>
        <item>Settings</item>
    </string-array>
    <string name="activity_settings_title">Settings</string>
    <string name="access_key_indicator_label">Access Key:</string>
    <string name="secret_key_indicator_label">Secret Key:</string>
    <string name="credentials_save_button_text">Save</string>
    <string name="credentials_not_set_error">Credentials not set for this exchange. Set it in the Settings menu.</string>
    <string name="unknown_error_when_placing_order_message">Unknown error when placing order.</string>
    <string name="invalid_price_error_string">Invalid price. Must be a valid positive number.</string>
    <string name="invalid_quantity_error_string">Invalid quantity. Must be a valid positive number.</string>
    <string name="order_item_header">Order</string>
    <string name="exchange_indicator_label">Exchange:</string>
    <string name="order_item_type_indicator_text">Order type:</string>
    <string name="order_summary_indicator_text">Order summary:</string>
    <string name="order_item_progress_indicator_label">Progress:</string>
    <string name="order_item_date_indicator_label">Order date:</string>
    <string name="order_item_full_header">Order Detail</string>
</resources>
