<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <Button
        android:id="@+id/order_cancellation_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="0dp"
        android:layout_marginTop="8dp"
        android:text="@string/order_cancel_button_string"
        app:layout_constraintRight_toRightOf="@+id/market_exchange_table"
        app:layout_constraintTop_toBottomOf="@+id/market_exchange_table"
        tools:text="@string/order_cancel_button_string"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.014" />

    <TableLayout
        android:id="@+id/market_exchange_table"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TableRow
            android:id="@+id/exchange_row"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/exchange_indicator_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="@dimen/trading_table_right_padding"
                android:text="@string/exchange_indicator_label"
                android:textSize="@dimen/subheading"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/exchange_indicator_label" />

            <TextView
                android:id="@+id/exchange_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:text="ExchangeName"
                android:textSize="@dimen/subheading"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </TableRow>

        <TableRow
            android:id="@+id/order_date_row"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/order_date_indicator_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="@dimen/trading_table_right_padding"
                android:text="@string/order_item_date_indicator_label"
                android:textSize="@dimen/subheading"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/order_item_date_indicator_label" />

            <TextView
                android:id="@+id/order_date_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_item_order_time_default_text"
                android:textSize="@dimen/subheading"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </TableRow>

        <TableRow
            android:id="@+id/order_item_type_row"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/order_item_type_indicator_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="@dimen/trading_table_right_padding"
                android:text="@string/order_item_type_indicator_text"
                android:textSize="@dimen/subheading"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/order_item_type_indicator_text" />

            <TextView
                android:id="@+id/order_type_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_item_order_type_default_text"
                android:textSize="@dimen/subheading"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </TableRow>

        <TableRow
            android:id="@+id/order_price_row"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/order_summary_indicator_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="@dimen/trading_table_right_padding"
                android:text="@string/order_summary_indicator_text"
                android:textSize="@dimen/subheading"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/order_summary_indicator_text" />

            <TextView
                android:id="@+id/order_summary_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_item_order_amount_price_default_text"
                android:textSize="@dimen/subheading"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:maxWidth="@dimen/order_summary_max_width" />

        </TableRow>

        <TableRow
            android:id="@+id/quantity_row"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/order_progress_indicator_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="@dimen/trading_table_right_padding"
                android:text="@string/order_item_progress_indicator_label"
                android:textSize="@dimen/subheading"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/order_item_progress_indicator_label" />

            <TextView
                android:id="@+id/order_progress_full_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/order_item_order_progress_default_text"
                android:textSize="@dimen/subheading"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:maxWidth="@dimen/order_summary_max_width" />

        </TableRow>

    </TableLayout>

</android.support.constraint.ConstraintLayout>