<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/access_key_indicator_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/access_key_indicator_label"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/access_key_indicator_label" />

    <EditText
        android:id="@+id/access_key_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/access_key_indicator_text_view"
        app:layout_constraintLeft_toRightOf="@+id/access_key_indicator_text_view"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/secret_key_indicator_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/secret_key_indicator_label"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:text="@string/secret_key_indicator_label"
        app:layout_constraintTop_toBottomOf="@+id/access_key_indicator_text_view" />

    <EditText
        android:id="@+id/secret_key_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="16dp"
        android:ems="10"
        android:inputType="textPassword"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/secret_key_indicator_text_view"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/access_key_edit_text"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/credentials_save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/credentials_save_button_text"
        android:textSize="16sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/secret_key_edit_text"
        tools:text="@string/credentials_save_button_text" />

</android.support.constraint.ConstraintLayout>